--- a/SYNQueueDemo/SYNQueueDemo/Base.lproj/Main.storyboard
+++ b/SYNQueueDemo/SYNQueueDemo/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="15A178w" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SYNQueueDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,8 +16,109 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EnV-Db-CHg">
+                                <rect key="frame" x="80" y="550" width="30" height="30"/>
+                                <animations/>
+                                <state key="normal" title="Add">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="addTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nBd-RP-AoR"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gl2-M7-6rH">
+                                <rect key="frame" x="463" y="550" width="57" height="30"/>
+                                <animations/>
+                                <state key="normal" title="Remove">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="removeTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hww-uS-Jn5"/>
+                                </connections>
+                            </button>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="iYl-xJ-9dS">
+                                <rect key="frame" x="16" y="20" width="568" height="520"/>
+                                <animations/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="RU3-sR-1Qy">
+                                    <size key="itemSize" width="150" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TaskCell" id="HgQ-Rq-FCj" customClass="TaskCell" customModule="SYNQueueDemo" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="150" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V2S-qr-0x0">
+                                                    <rect key="frame" x="77" y="8" width="65" height="30"/>
+                                                    <animations/>
+                                                    <color key="backgroundColor" red="0.67450982332229614" green="0.25490197539329529" blue="0.25882354378700256" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <state key="normal" title="Fail">
+                                                        <color key="titleColor" red="0.96078431606292725" green="0.96078431606292725" blue="0.96078431606292725" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                    <connections>
+                                                        <action selector="failTapped:" destination="HgQ-Rq-FCj" eventType="touchUpInside" id="1RK-UK-YjK"/>
+                                                    </connections>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ohO-Ha-Frn">
+                                                    <rect key="frame" x="8" y="8" width="65" height="30"/>
+                                                    <animations/>
+                                                    <color key="backgroundColor" red="0.56470590829849243" green="0.66274511814117432" blue="0.3490196168422699" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" priority="250" constant="1000" id="H9I-fF-dm2"/>
+                                                    </constraints>
+                                                    <state key="normal" title="Succeed">
+                                                        <color key="titleColor" red="0.96078431610000004" green="0.96078431610000004" blue="0.96078431610000004" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                    <connections>
+                                                        <action selector="succeedTapped:" destination="HgQ-Rq-FCj" eventType="touchUpInside" id="off-Pa-igd"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <animations/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <animations/>
+                                        <constraints>
+                                            <constraint firstItem="V2S-qr-0x0" firstAttribute="top" secondItem="HgQ-Rq-FCj" secondAttribute="topMargin" id="1mJ-M1-fbZ"/>
+                                            <constraint firstItem="ohO-Ha-Frn" firstAttribute="leading" secondItem="HgQ-Rq-FCj" secondAttribute="leadingMargin" id="2CE-It-cn4"/>
+                                            <constraint firstItem="ohO-Ha-Frn" firstAttribute="top" secondItem="HgQ-Rq-FCj" secondAttribute="topMargin" id="8f7-qG-Nyh"/>
+                                            <constraint firstItem="V2S-qr-0x0" firstAttribute="width" secondItem="ohO-Ha-Frn" secondAttribute="width" id="BhY-lm-FVQ"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="V2S-qr-0x0" secondAttribute="trailing" id="Czi-An-L34"/>
+                                            <constraint firstItem="V2S-qr-0x0" firstAttribute="leading" secondItem="ohO-Ha-Frn" secondAttribute="trailing" constant="4" id="Day-Ur-dGV"/>
+                                        </constraints>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="WP1-rl-QgB"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="EhQ-cw-ZTA"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="iYl-xJ-9dS" secondAttribute="trailing" id="7Gd-7N-F2B"/>
+                            <constraint firstItem="iYl-xJ-9dS" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="85O-1J-7zE"/>
+                            <constraint firstItem="iYl-xJ-9dS" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="NiF-a5-DYK"/>
+                            <constraint firstItem="EnV-Db-CHg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="64" id="XTf-dU-zoD"/>
+                            <constraint firstItem="EnV-Db-CHg" firstAttribute="top" secondItem="iYl-xJ-9dS" secondAttribute="bottom" constant="10" id="dfK-8R-tV0"/>
+                            <constraint firstItem="EnV-Db-CHg" firstAttribute="centerY" secondItem="gl2-M7-6rH" secondAttribute="centerY" id="kwD-88-d7P"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="EnV-Db-CHg" secondAttribute="bottom" constant="20" id="vP6-g7-pOn"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="gl2-M7-6rH" secondAttribute="trailing" constant="64" id="yhn-UO-xWP"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="iYl-xJ-9dS" id="Fwb-cQ-XXU"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
