--- a/SYNQueueDemo/SYNQueueDemo/Base.lproj/Main.storyboard
+++ b/SYNQueueDemo/SYNQueueDemo/Base.lproj/Main.storyboard
@@ -37,12 +37,12 @@
                                     <action selector="removeTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hww-uS-Jn5"/>
                                 </connections>
                             </button>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="iYl-xJ-9dS">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="iYl-xJ-9dS">
                                 <rect key="frame" x="16" y="20" width="568" height="520"/>
                                 <animations/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="RU3-sR-1Qy">
-                                    <size key="itemSize" width="150" height="50"/>
+                                    <size key="itemSize" width="300" height="50"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -52,11 +52,11 @@
                                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="150" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="300" height="50"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V2S-qr-0x0">
-                                                    <rect key="frame" x="77" y="8" width="65" height="30"/>
+                                                    <rect key="frame" x="154" y="8" width="130" height="30"/>
                                                     <animations/>
                                                     <color key="backgroundColor" red="0.67450982332229614" green="0.25490197539329529" blue="0.25882354378700256" alpha="1" colorSpace="calibratedRGB"/>
                                                     <state key="normal" title="Fail">
@@ -68,7 +68,7 @@
                                                     </connections>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ohO-Ha-Frn">
-                                                    <rect key="frame" x="8" y="8" width="65" height="30"/>
+                                                    <rect key="frame" x="16" y="8" width="130" height="30"/>
                                                     <animations/>
                                                     <color key="backgroundColor" red="0.56470590829849243" green="0.66274511814117432" blue="0.3490196168422699" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
@@ -89,11 +89,11 @@
                                         <animations/>
                                         <constraints>
                                             <constraint firstItem="V2S-qr-0x0" firstAttribute="top" secondItem="HgQ-Rq-FCj" secondAttribute="topMargin" id="1mJ-M1-fbZ"/>
-                                            <constraint firstItem="ohO-Ha-Frn" firstAttribute="leading" secondItem="HgQ-Rq-FCj" secondAttribute="leadingMargin" id="2CE-It-cn4"/>
+                                            <constraint firstItem="ohO-Ha-Frn" firstAttribute="leading" secondItem="HgQ-Rq-FCj" secondAttribute="leadingMargin" constant="8" id="2CE-It-cn4"/>
                                             <constraint firstItem="ohO-Ha-Frn" firstAttribute="top" secondItem="HgQ-Rq-FCj" secondAttribute="topMargin" id="8f7-qG-Nyh"/>
                                             <constraint firstItem="V2S-qr-0x0" firstAttribute="width" secondItem="ohO-Ha-Frn" secondAttribute="width" id="BhY-lm-FVQ"/>
-                                            <constraint firstAttribute="trailingMargin" secondItem="V2S-qr-0x0" secondAttribute="trailing" id="Czi-An-L34"/>
-                                            <constraint firstItem="V2S-qr-0x0" firstAttribute="leading" secondItem="ohO-Ha-Frn" secondAttribute="trailing" constant="4" id="Day-Ur-dGV"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="V2S-qr-0x0" secondAttribute="trailing" constant="8" id="Czi-An-L34"/>
+                                            <constraint firstItem="V2S-qr-0x0" firstAttribute="leading" secondItem="ohO-Ha-Frn" secondAttribute="trailing" constant="8" id="Day-Ur-dGV"/>
                                         </constraints>
                                     </collectionViewCell>
                                 </cells>
